k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: xxscreeps
spec:
  selector:
    app: xxscreeps-redis
  ports:
    - port: 6379
      targetPort: 6379
