k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xxscreeps
  namespace: xxscreeps
spec:
  selector:
    app: xxscreeps
  ports:
    - port: 21025
      targetPort: 21025
